<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_tracker</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="winni@todo.todo">winni</maintainer>
  <license>TODO: License declaration</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>object_tracker_interfaces</depend>
  <depend>perception_pcl</depend>
  <depend>pcl_conversions</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <exec_depend>ros2launch</exec_depend>

</package>
